# ghostpsalm.com

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  ghostpsalm.service  run_dev.sh
docs/: TOOLS.md  chatgpt-gpt-setup.md  openapi.yaml  personal_mcp_assistant_overview_tdd.docx
keys/: public.pem
migrations/: 20260617000001_initial_schema.sql  20260617000002_revoked_tokens.sql  20260617000003_notification_log.sql
scripts/: gen_keys.sh  setup_db.sh  setup_tailscale.sh
src/: config.rs  main.rs  state.rs
src/api/: audit_middleware.rs  auth.rs  middleware.rs  mod.rs
src/api/tools/: audit.rs  contacts.rs  daily_review.rs  git_sync.rs  health.rs  journal.rs  knowledge.rs  mod.rs  notifications.rs  purchases.rs  tasks.rs
src/db/: mod.rs  models.rs  schema.rs
src/git/: mod.rs
src/notifications/: mod.rs  pushover.rs
src/vault/: journal.rs  knowledge.rs  mod.rs
vault/journal/2026/: 2026-06-17.md
vault/references/music/: norma-jean-lyrics-raw.txt  norma-jean.md
vault/tasks/: inbox.md
